# gbars

./: .gitignore  Cargo.toml  DESIGNDOC.md  LICENSE  README.md
gbars_hardware/: Cargo.toml
gbars_hardware/src/: lib.rs
gbars_hardware/src/classic/: cartridge.rs  console.rs  cpu.rs  instruction.rs  memory.rs  mod.rs  registers.rs  utils.rs
src/: ips.rs  main.rs
src/audio/: mod.rs  pa_types.rs
src/classic/: cartridge.rs  cpu.rs  instruction.rs  memory.rs  mod.rs  registers.rs  utils.rs
src/classic_old/: cpu.rs  gb_types.rs  io.rs  mod.rs  utils.rs
src/emu/: emulator.rs  input.rs  mod.rs  opcodes.rs  registers.rs  utils.rs
src/graphics/: gl_types.rs  mod.rs  opengl.rs  utils.rs
src/graphics/shaders/: gb_screen.frag  gb_screen.vert
src/interface/: cli.rs  cli.yaml  gui.rs  mod.rs  rom_meta.css  windows.rs
