[package]
name = "gbars"
version = "0.1.0"
authors = ["Aidan T. Manning <periodicaidan@gmail.com>"]
edition = "2018"

[dependencies]
hardware = { path = "gbars_hardware" }
lazy_static = "1.3.0"
clap = { version = "2.33.0", features = ["yaml"] }
gl = "0.14.0"
glutin = "0.23.0"
#portaudio = "0.7.0"

[profile.release]
lto = true