[package]
name = "gbars"
version = "0.1.0"
description = "An experimental GameBoy emulator written in Rust"
authors = ["Aidan T. Manning <periodicaidan@gmail.com>"]
edition = "2018"
repository = "https://github.com/periodicaidan/gbars"
license = "MIT"

[dependencies]
# internal crates
hardware = { path = "gbars_hardware" }

# general
lazy_static = "1.3.0"
clap = { version = "2.33.0", features = ["yaml"] }

# graphics
gl = "0.14.0"
glutin = "0.23.0"
pixels = "0.0.2"

# audio
#portaudio = "0.7.0"

[profile.release]
lto = true